updates - added secure area - started working on user area to get users from the db

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -13,7 +13,7 @@
     <body>
         <div id="main-nav">
             <ul>
-                <li id="art"><a href="#">Art</a></li>
+                <li id="art"><a href="{{ path('art') }}">Art</a></li>
                 <li id="work"><a href="#">Worky Stuff</a></li>
                 <li id="biog"><a href="#">Me</a></li>
                 <li id="contact"><a href="#">Contact</a></li>
