--- a/src/ISpySi/WelcomeBundle/Resources/views/Default/index.html.twig
+++ b/src/ISpySi/WelcomeBundle/Resources/views/Default/index.html.twig
@@ -11,7 +11,7 @@
     this pattern creates a link to the 'art' route and passes a param 'page' with the value of 'art'    
     <a href="{{ path('art', { 'page' : 'art' }) }}">&hellip;all art</a>
     #}
-    <a href="{{ path('art') }}">&hellip;all art</a>
+    <a id="allArt" href="{{ path('art') }}">&hellip;all art</a>
 </div>
 <div id="featured-work">
 
